@@ -1,3 +1,5 @@
+2006/7/8 -- released version 20060708_trunk
+
 * fix loss_color description -- tobi
 * fix loss_background implementation to still color mainline
 
